syntax = "proto3";

option java_package = "com.aowen.pokedex.datastore";
option java_multiple_files = true;

message UserPreferences {
    bool has_opened_app = 1;
    map<string, bool> selected_sets = 2;
}